update overview-latam component

--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -152,13 +152,13 @@
                     <ul class="nav nav-pills nav-fill">
                         <li class="nav-item">
                             <a class="nav-link p-2" [ngClass]="{'active': selectedTab2 === 1}"
-                                (click)="gettrafficOrSales('traffic'); chartsInitLoad = chartsInitLoad && false">
+                                (click)="getTrafficOrSales('traffic'); chartsInitLoad = chartsInitLoad && false">
                                 {{ 'general.traffic' | translate }}
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link p-2" [ngClass]="{'active': selectedTab2 === 2}"
-                                (click)="gettrafficOrSales('sales'); chartsInitLoad = chartsInitLoad && false">
+                                (click)="getTrafficOrSales('sales'); chartsInitLoad = chartsInitLoad && false">
                                 {{ 'general.sales' | translate }}
                             </a>
                         </li>
