--- a/src/app/modules/dashboard/components/behaviour-wrapper/behaviour-wrapper.component.html
+++ b/src/app/modules/dashboard/components/behaviour-wrapper/behaviour-wrapper.component.html
@@ -25,7 +25,7 @@
             </div>
             <div class="card-body">
                 <app-chart-pie name="bh-sessions-ret-visitor" [data]="behavior.newUsersVsCurrent"
-                    [status]="behaviorReqStatus[0].reqStatus" legendPosition="bottom">
+                    [status]="behaviorReqStatus[0].reqStatus" [minLegendHeight]="150" legendPosition="bottom">
                 </app-chart-pie>
             </div>
         </div>
@@ -39,7 +39,7 @@
             </div>
             <div class="card-body">
                 <app-chart-pie name="bh-sales-ret-visitor" [data]="behavior.salesNewUsersVsCurrent"
-                    [status]="behaviorReqStatus[1].reqStatus" legendPosition="bottom">
+                    [status]="behaviorReqStatus[1].reqStatus" [minLegendHeight]="150" legendPosition="bottom">
                 </app-chart-pie>
             </div>
         </div>
@@ -53,7 +53,7 @@
             </div>
             <div class="card-body">
                 <app-chart-pie name="bh-sales-by-conv-sorce" [data]="behavior.salesBySource"
-                    [status]="behaviorReqStatus[2].reqStatus" legendPosition="bottom">
+                    [status]="behaviorReqStatus[2].reqStatus" [minLegendHeight]="150" legendPosition="bottom">
                 </app-chart-pie>
             </div>
         </div>
@@ -67,7 +67,7 @@
             </div>
             <div class="card-body">
                 <app-chart-pie name="bh-sales-by-sorce" [data]="behavior.salesBySector"
-                    [status]="behaviorReqStatus[3].reqStatus" legendPosition="bottom">
+                    [status]="behaviorReqStatus[3].reqStatus" [minLegendHeight]="150" legendPosition="bottom">
                 </app-chart-pie>
             </div>
         </div>
@@ -88,7 +88,7 @@
             </div>
             <div class="card-body">
                 <app-chart-pie name="bh-sessions-by-audience" [data]="behavior.sessionsByAudience"
-                    [status]="behaviorReqStatus[4].reqStatus" legendPosition="bottom">
+                    [status]="behaviorReqStatus[4].reqStatus" [minLegendHeight]="150" legendPosition="bottom">
                 </app-chart-pie>
             </div>
         </div>
@@ -101,8 +101,8 @@
                 <span class="h4">Usuarios nuevos por tipo de audiencia</span>
             </div>
             <div class="card-body">
-                <app-chart-pie name="bh-users-by-audience" [data]="behavior.newUsersByAudience" legendPosition="bottom"
-                    [status]="behaviorReqStatus[5].reqStatus">
+                <app-chart-pie name="bh-users-by-audience" [data]="behavior.newUsersByAudience" [minLegendHeight]="150"
+                    legendPosition="bottom" [status]="behaviorReqStatus[5].reqStatus">
                 </app-chart-pie>
             </div>
         </div>
@@ -116,7 +116,7 @@
             </div>
             <div class="card-body">
                 <app-chart-bar name="bh-quantity-by-audience" [data]="behavior.quantityByAudience"
-                    legendPosition="bottom" [status]="behaviorReqStatus[6].reqStatus">
+                    [minLegendHeight]="150" legendPosition="bottom" [status]="behaviorReqStatus[6].reqStatus">
                 </app-chart-bar>
             </div>
         </div>
