update i18n references in overview-latam component

--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -27,7 +27,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 3}"
-                                (click)="getSectorsAndCategories('funds')">Fondo</a>
+                                (click)="getSectorsAndCategories('funds')">{{ 'general.fund' | translate }}</a>
                         </li>
                     </ul>
                 </div>
@@ -37,11 +37,11 @@
                     <div class="card-header">
                         <span class="h4">
                             {{
-                            ('overviewLatam.chart1CardTitle1' | translate) +
-                            (( selectedTab1 === 1 ? 'overviewLatam.chart1CardTitle2' : selectedTab1 === 2 ?
-                            'overviewLatam.chart1CardTitle3' : 'Fondos')
+                            ('overview.chart1CardTitle1' | translate) +
+                            (( selectedTab1 === 1 ? 'overview.chart1CardTitle2' : selectedTab1 === 2 ?
+                            'overview.chart1CardTitle3' : 'overview.chart1CardTitle4')
                             | translate) +
-                            ('overviewLatam.chart1CardTitle4' | translate)
+                            ('overview.chart1CardTitle5' | translate)
                             }}
                         </span>
                     </div>
@@ -61,11 +61,11 @@
                     <div class="card-header">
                         <span class="h4">
                             {{
-                            ('overviewLatam.chart1CardTitle1' | translate) +
-                            (( selectedTab1 === 1 ? 'overviewLatam.chart1CardTitle2' : selectedTab1 === 2 ?
-                            'overviewLatam.chart1CardTitle3' : 'Fondos')
+                            ('overview.chart1CardTitle1' | translate) +
+                            (( selectedTab1 === 1 ? 'overview.chart1CardTitle2' : selectedTab1 === 2 ?
+                            'overview.chart1CardTitle3' : 'overview.chart1CardTitle4')
                             | translate) +
-                            ('overviewLatam.chart1CardTitle4' | translate)
+                            ('overview.chart1CardTitle5' | translate)
                             }}
                         </span>
                     </div>
@@ -73,7 +73,8 @@
                         <app-generic-table
                             [displayedColumns]="selectedTab1 === 1 ? metricByCountryColumns.sector : selectedTab1 === 2  ? metricByCountryColumns.category : metricByCountryColumns.found"
                             [tableData]="metricByCountryTable" [tableDataChange]="metricByCountryTable.data"
-                            errorData="Error al consultar países" emptyDataMsg="No se encontraron países">
+                            [errorMsg]="'overview.table1Error' | translate"
+                            [emptyDataMsg]="'overview.table1Empty' | translate">
                         </app-generic-table>
                     </div>
                 </div>
@@ -159,8 +160,8 @@
                         <app-chart-multiple-axes [data]="usersInvOrAup"
                             [value1]="selectedTab3 === 1 ? 'transactions' : selectedTab3 === 2 ? 'revenue' : 'revenue'"
                             [value2]="selectedTab3 === 1 ? 'users' : selectedTab3 === 2 ? 'investment': 'aup'"
-                            [valueName1]="selectedTab3 === 1 ? 'Conversiones' : selectedTab3 === 2 ? 'Revenue' :'Revenue'"
-                            [valueName2]="selectedTab3 === 1 ? 'Usuarios' : selectedTab3 === 2 ? 'Inversión' : 'AUP'"
+                            [valueName1]="selectedTab3 === 1 ? ('general.conversions' | translate) : selectedTab3 === 2 ? 'Revenue' :'Revenue'"
+                            [valueName2]="selectedTab3 === 1 ? ('general.users' | translate) : selectedTab3 === 2 ? ('general.investment' | translate) : 'AUP'"
                             [valueFormat1]="selectedTab3 > 1 && 'USD'" [valueFormat2]="selectedTab3 > 1 && 'USD'"
                             [status]="usersInvOrAupReqStatus" name="latam-metric-comparison">
                         </app-chart-multiple-axes>
@@ -182,7 +183,7 @@
                         <li class="nav-item">
                             <a class="nav-link p-2" [ngClass]="{'active': selectedTab2 === 2}"
                                 (click)="getTrafficOrSales('sales'); chartsInitLoad = chartsInitLoad && false">
-                                {{ 'general.sales' | translate }}
+                                {{ 'general.conversions' | translate }}
                             </a>
                         </li>
                     </ul>
@@ -194,8 +195,8 @@
                 <div class="card height-fluid">
                     <div class="card-header">
                         <span class="h4">
-                            {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.sales') | translate) +
-                            ('overviewLatam.chart2CardTitle1' | translate) }}
+                            {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.conversions') | translate) +
+                            ('overview.chart2CardTitle1' | translate) }}
                         </span>
                     </div>
                     <div class="card-body">
@@ -236,8 +237,8 @@
                 <div class="card height-fluid">
                     <div class="card-header">
                         <span class="h4">
-                            {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.sales') | translate) +
-                            ('overviewLatam.chart3CardTitle1' | translate) }}
+                            {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.conversions') | translate) +
+                            ('overview.chart3CardTitle1' | translate) }}
                         </span>
                     </div>
                     <div class="card-body">
@@ -282,8 +283,8 @@
                 <div class="card">
                     <div class="card-header">
                         <span class="h4">
-                            {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.sales') | translate) +
-                            ('overviewLatam.chart4CardTitle1' | translate) }}
+                            {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.conversions') | translate) +
+                            ('overview.chart4CardTitle1' | translate) }}
                         </span>
                     </div>
                     <div class="card-body">
@@ -300,8 +301,8 @@
                 <div class="card">
                     <div class="card-header">
                         <span class="h4">
-                            {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.sales') | translate) +
-                            ('overviewLatam.chart5CardTitle1' | translate) }}
+                            {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.conversions') | translate) +
+                            ('overview.chart5CardTitle1' | translate) }}
                         </span>
                     </div>
                     <div class="card-body" style="height: 328px">
@@ -338,7 +339,8 @@
                 <div class="card height-fluid">
                     <div class="card-header">
                         <span class="h4">
-                            {{selectedTab2 === 1 ? 'Tráfico' : 'Conversiones'}} por día de la semana y hora del día
+                            {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.conversions') | translate) +
+                            ('charts.dayAndHour' | translate) }}
                         </span>
                     </div>
                     <div class="card-body">
@@ -366,7 +368,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="h4">{{ 'overviewLatam.table1CardTitle1' | translate }}</span>
+                        <span class="h4">{{ 'overview.table2CardTitle1' | translate }}</span>
                         <ng-container *ngIf="selectedCategories?.length > 1">
                             <ng-container [ngSwitch]="selectedTab5">
                                 <span *ngSwitchCase="1" class="h4"> - PS</span>
@@ -378,8 +380,8 @@
                     </div>
                     <div class="card-body">
                         <app-generic-table [displayedColumns]="topProductsColumns" [tableData]="topProducts"
-                            [tableDataChange]="topProducts.data" errorData="Error al consultar productos"
-                            emptyDataMsg="No se encontraron productos">
+                            [tableDataChange]="topProducts.data" [errorMsg]="'overview.table2Error' | translate"
+                            [emptyDataMsg]="'overview.table2Empty' | translate">
                         </app-generic-table>
                     </div>
                 </div>
