update i18n references in overview-wrapper component

--- a/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
+++ b/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
@@ -165,8 +165,8 @@
             <div class="card height-fluid">
                 <div class="card-header">
                     <span class="h4">
-                        {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.sales') | translate) +
-                        ('overviewLatam.chart2CardTitle1' | translate) }}
+                        {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.conversions') | translate) +
+                        ('overview.chart2CardTitle1' | translate) }}
                     </span>
                 </div>
                 <div class="card-body">
@@ -208,8 +208,8 @@
             <div class="card height-fluid">
                 <div class="card-header">
                     <span class="h4">
-                        {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.sales') | translate) +
-                        ('overviewLatam.chart3CardTitle1' | translate) }}
+                        {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.conversions') | translate) +
+                        ('overview.chart3CardTitle1' | translate) }}
                     </span>
                 </div>
                 <div class="card-body">
