--- a/src/app/modules/dashboard/components/general-filters/general-filters.component.html
+++ b/src/app/modules/dashboard/components/general-filters/general-filters.component.html
@@ -3,7 +3,7 @@
 
         <!-- country -->
         <div [hidden]="!isLatamSelected" class="col-12 col-sm-6 col-lg-2 mb-4">
-            <span class="mb-1 h4">{{ 'filters.country' | translate }}</span>
+            <span class="mb-1 h4">{{ 'general.country' | translate }}</span>
             <mat-select formControlName="countries" multiple [placeholder]="'filters.countryPh' | translate"
                 disableOptionCentering>
                 <div class="input-group input-group-alternative mb-1">
@@ -307,7 +307,7 @@
         <!-- period -->
         <div class="col-12 col-sm-6 mb-4" [ngClass]="{'col-lg-3' : !isLatamSelected, 'col-lg-2' : isLatamSelected}">
             <div class="date-picker">
-                <span class="mb-1 h4">{{ 'filters.period' | translate }}</span>
+                <span class="mb-1 h4">{{ 'general.period' | translate }}</span>
                 <mat-form-field appearance="fill">
                     <mat-date-range-input [rangePicker]="picker">
                         <input matStartDate formControlName="startDate" [placeholder]="'filters.periodPh1' | translate">
