add i18n reference in multiple-tab-selector component

--- a/src/app/modules/dashboard/components/multiple-tabs-selector/multiple-tabs-selector.component.html
+++ b/src/app/modules/dashboard/components/multiple-tabs-selector/multiple-tabs-selector.component.html
@@ -18,6 +18,6 @@
     </div>
 
     <p class="mb-1 text-right" *ngIf="tabList?.length > 1">
-        <small class="text-muted">Ctrl + click para selección múltiple</small>
+        <small class="text-muted">{{ 'others.multSelection' | translate }}</small>
     </p>
 </div>
