add template to campaign-comparator component

--- a/src/app/modules/dashboard/pages/campaign-comparator/campaign-comparator.component.html
+++ b/src/app/modules/dashboard/pages/campaign-comparator/campaign-comparator.component.html
@@ -1,3 +1,79 @@
-<div class="main-container">
-    <app-maintenance></app-maintenance>
+<div class="main-container mt-4">
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <app-campaign-comparator-filters (selectedFiltersChange)="filtersChange(1, $event)">
+            </app-campaign-comparator-filters>
+        </div>
+        <div class="col-12 col-md-6">
+            <app-campaign-comparator-filters (selectedFiltersChange)="filtersChange(2, $event)">
+            </app-campaign-comparator-filters>
+        </div>
+        <div class="col-12 text-right">
+            <button class="btn btn-primary" [disabled]="!firstSelection?.campaign || !secondSelection?.campaign"
+                (click)="compareCampaigns()">Comparar</button>
+        </div>
+    </div>
+
+    <ng-container *ngIf="firstSelection?.campaign && secondSelection?.campaign">
+        <div class="row mt-4">
+            <div class="col-12 col-md-6">
+                <div class="row">
+                    <div *ngFor="let kpi of kpisCamps.camp1.kpis" class="col-12 col-lg-6 col-xl-4 mb-4">
+                        <app-card-stat [stat]="kpi" [loader]="kpisCamps.camp1.reqStatus <= 1"></app-card-stat>
+                    </div>
+                    <div class="col-12 mt--3 mt-xl-2" [hidden]="kpisCamps.camp1.reqStatus !== 3">
+                        <p class="text-center text-muted mb-0">
+                            Error al consultar datos
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6">
+                <div class="row">
+                    <div *ngFor="let kpi of kpisCamps.camp2.kpis" class="col-12 col-lg-6 col-xl-4 mb-4">
+                        <app-card-stat [stat]="kpi" [loader]="kpisCamps.camp2.reqStatus <= 1"></app-card-stat>
+                    </div>
+                    <div class="col-12 mt--3 mt-xl-2" [hidden]="kpisCamps.camp2.reqStatus !== 3">
+                        <p class="text-center text-muted mb-0">
+                            Error al consultar datos
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-12 col-md-6 mb-4">
+                <app-generic-table [displayedColumns]="acqCampaignsTableColumns" [tableData]="acqCamps.camp1"
+                    [tableDataChange]="acqCamps.camp1.data">
+                </app-generic-table>
+            </div>
+
+            <div class="col-12 col-md-6 mb-4">
+                <app-generic-table [displayedColumns]="acqCampaignsTableColumns" [tableData]="acqCamps.camp2"
+                    [tableDataChange]="acqCamps.camp2.data">
+                </app-generic-table>
+            </div>
+        </div>
+
+
+        <ng-container>
+            <div class="row mt-4">
+                <div class="col-12 col-md-6 mb-4">
+                    <app-generic-table [displayedColumns]="convCampTableColumns" [tableData]="convCamps.camp1"
+                        [tableDataChange]="convCamps.camp1.data">
+                    </app-generic-table>
+                </div>
+
+                <div class="col-12 col-md-6 mb-4">
+                    <app-generic-table [displayedColumns]="convCampTableColumns" [tableData]="convCamps.camp2"
+                        [tableDataChange]="convCamps.camp2.data">
+                    </app-generic-table>
+                </div>
+            </div>
+        </ng-container>
+
+    </ng-container>
+
 </div>
