--- a/src/app/modules/dashboard/components/generic-table/generic-table.component.html
+++ b/src/app/modules/dashboard/components/generic-table/generic-table.component.html
@@ -3,7 +3,7 @@
         <mat-spinner></mat-spinner>
     </div>
 
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource" matSort [ngClass]="{'reduced-padding': reducedPadding}">
         <ng-container *ngFor="let column of displayedColumns">
             <ng-container [matColumnDef]="column.name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header
