--- a/src/app/modules/dashboard/components/generic-table/generic-table.component.scss
+++ b/src/app/modules/dashboard/components/generic-table/generic-table.component.scss
@@ -1,5 +1,6 @@
 .adaptable-container {
     background-color: #ffffff;
+    border-radius: 0.375rem;
     min-height: 250px;
     overflow: auto;
     position: relative;
@@ -11,6 +12,7 @@
     }
 
     .lg-container {
+        display: flex;
         span {
             text-overflow: ellipsis;
             overflow: hidden;
@@ -51,4 +53,14 @@
     margin-bottom: 0px !important;
     margin-top: 0px !important;
     max-width: unset !important;
+}
+
+.reduced-padding {
+    th.mat-header-cell {
+        padding: 8px 4px !important;
+    }
+
+    td.mat-cell, td.mat-footer-cell {
+        padding: 0 4px !important
+    }
 }
