--- a/src/app/modules/dashboard/pages/sentiment-analysis/sentiment-analysis.component.html
+++ b/src/app/modules/dashboard/pages/sentiment-analysis/sentiment-analysis.component.html
@@ -102,7 +102,8 @@
                 </div>
                 <div class="card-body">
                     <app-chart-line-series name="sentiment-time" [series]="distributionOverTime"
-                        yTitle="Porcentaje de chats %" [status]="distributionOverTimeReqStatus">
+                        yTitle="Porcentaje de chats %" [status]="distributionOverTimeReqStatus"
+                        [contrastingColors]="false">
                     </app-chart-line-series>
                 </div>
             </div>
