--- a/src/app/modules/dashboard/pages/sentiment-analysis/sentiment-analysis.component.scss
+++ b/src/app/modules/dashboard/pages/sentiment-analysis/sentiment-analysis.component.scss
@@ -3,13 +3,34 @@ ul.scale-container {
 
     li {
         align-items: center;
-        display: flex;
+        display: grid;
+        grid-template-columns: auto auto 1fr;
+        margin-bottom: 4px;
+        margin-top: 4px;
+        
+        @media screen and (min-width: 570px) and (max-width: 1085px) {
+            align-items: flex-start;
+            grid-template-columns: auto 10.5rem 1fr;
+            margin-bottom: 8px;
+            margin-top: 8px;
+        }
+
+        @media screen and (max-width: 564px) {
+            align-items: flex-start;
+            grid-template-columns: min-content auto;
+            margin-bottom: 16px;
+            margin-top: 16px;
+          
+            span:last-of-type {
+                grid-column: 1/4;
+            }
+        }
     }
 
     i {
         color: #767676;
         font-size: 20px;
-        margin-right: 8px;
+        margin-right: 16px;
     }
 
     span:first-of-type {
